--- a/cafe_info_crawling .ipynb
+++ b/cafe_info_crawling .ipynb
@@ -574,7 +574,9 @@
     "# searchIframe으로 컨텍스트 전환 + div scroll 내리기\n",
     "driver.switch_to.frame(\"searchIframe\")\n",
     "scroll_div = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.ID, \"_pcmap_list_scroll_container\")))\n",
-    "scroll_down(driver)\n",
+    "for i in range(5):\n",
+    "    driver.execute_script('arguments[0].scrollTop = arguments[0].scrollHeight', scroll_div)\n",
+    "\n",
     "\n",
     "# 목록을 담고 있는 ul 태그를 찾고, 그 안의 모든 li 태그를 가져옴\n",
     "cafe_list = scroll_div.find_elements(By.TAG_NAME, \"li\")\n",
